external_gateway/demo_02/manifests/ref_grant.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: allow-httproute-from-api
  namespace: payment
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: api
  to:
  - group: ""
    kind: Service
