external_gateway/demo_02/manifests/payment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: payment
  name: payment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: payment
  name: payment-svc
spec:
  selector:
    app: payment
  ports:
  - port: 8080
    targetPort: 8080
