external_gateway/demo_02/manifests/api-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store-external-api
  namespace: api
spec:
  parentRefs:
  - kind: Gateway
    name: https-ext-gtw
    namespace: infra
  hostnames:
  - "store.example.com"
  rules:
  - matches:
    - path:
        value: /api
    backendRefs:
    - name: api-svc
      port: 8080
      # namespace: api
